--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <header>
         <div>
                 the head of the site
+                <img src="/images/cat.jpg">
         </div>
 </header>
    
