--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <body>
 <header>
         <div>
-                the head of the site
-                <img src="/images/cat.jpg">
+            <p><img src="/images/cat.jpg" alt="the cat image" /> the head of the site</p>
         </div>
 </header>
    
