--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 
-<h1>
+    <h1>
     
-    <p><img src="/images/cat.jpg" alt="the cat image" /> the head of the site</p>
+    <p><img src="./images/cat.jpg" alt="the cat image" />Bonjour</p>
 
 </h1>
             
